--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "phpunit/phpunit": "^11.5.3",
+        "barryvdh/laravel-ide-helper": "^3.6"
     },
     "autoload": {
         "psr-4": {
