feat(landing): Añadir el módulo de animación de héroes de Three.js
- Extraer el script de Three.js en línea en un archivo JavaScript modular
- Añadir la dependencia de Three.js mediante npm para una mejor gestión de dependencias
- Inicializar la animación de héroes en el punto de entrada de la página de aterrizaje
- Eliminar el script de la plantilla Blade para una separación más clara de los problemas

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "sweetalert2": "^11.26.18",
         "swiper": "^11.2.10",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "three": "^0.183.0"
     }
 }
